2019-10-01  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Build: we need -Wformat for -Wformat-security to be effective

	* configure.ac:
	* meson.build:

2019-10-01  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Build: GTimeVal, used in GtkSourceView-3, is deprecated in glib
	version 2.62; we will use GtkSourceView-4 if available, which
	doesn't use GTimeVal, or otherwise continue to use GtkSourceView-3
	with -DGLIB_VERSION_MIN_REQUIRED=GLIB_VERSION_2_48 to suppress the
	deprecation warning.

	* configure.ac:
	* meson.build:

2019-09-18  Peter Bloomfield  <pbloomfield@bellsouth.net>

	ab-main: Use GMenu API instead of GtkBuilder

	* src/ab-main.c (bab_cleanup), (set_address_book_menu_items),
	(file_delete_activated):
	* ui/ab-main.ui: no need for place-holder

2019-09-18  Peter Bloomfield  <pbloomfield@bellsouth.net>

	address-book-config: Do not crash

	* src/address-book-config.c (edit_book_response): destroy the
	dialog as the last step; otherwise the struct is freed before we
	use it.

2019-09-14  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mime-widget: subclass GtkBox instead of GObject

	This makes BalsaMimeWidget inherit from GtkBox, so it is
	actually a widget. A subclass that used to create a vertical
	GtkBox can use the BalsaMimeWidget itself. Other subclasses can
	add their custom widget to the BalsaMimeWidget.

	* src/balsa-message.c (bm_find_scroll_to_rectangle),
	(bm_find_entry_changed_cb), (bm_find_again), (balsa_message_init),
	(balsa_message_destroy), (part_info_init), (add_part),
	(gtk_tree_hide_func), (balsa_message_current_part_widget),
	(balsa_message_can_select), (balsa_message_grab_focus),
	(balsa_message_can_zoom), (balsa_message_zoom),
	(balsa_message_find_in_message):
	* src/balsa-mime-widget-crypto.c (balsa_mime_widget_new_signature),
	(balsa_mime_widget_new_pgpkey):
	* src/balsa-mime-widget-image.c (img_check_size),
	(balsa_mime_widget_new_image):
	* src/balsa-mime-widget-message.c (balsa_mime_widget_new_message),